--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
+    "gulp-imagemin": "^3.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.9.1",
-    "gulp-watch": "^4.3.11"
+    "gulp-uncss": "^1.0.6",
+    "gulp-watch": "^4.3.11",
+    "imagemin-pngquant": "^5.0.0"
   },
   "dependencies": {
     "normalize.css": "^5.0.0"
