--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "gulp-cssnano": "^2.1.2",
     "gulp-eslint": "^3.0.1",
     "gulp-imagemin": "^3.1.1",
+    "gulp-load-plugins": "^1.4.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.9.1",
     "gulp-uglify": "^2.0.0",
     "gulp-watch": "^4.3.11",
-    "imagemin-pngquant": "^5.0.0",
-    "sassdoc": "^2.1.20"
+    "imagemin-pngquant": "^5.0.0"
   },
   "dependencies": {
     "normalize.css": "^5.0.0"
